
Version 0.2.1 (?)
  * Requires Sequel 2.3.x (this fixes an issue with SQLite and DateTime
    objects).
  * Requires RedCloth 4.0.x. Markdown syntax is no longer supported as a result.
  * Names of existing tags are now suggested as you type in the "Tags" field
    when creating or editing a blog post.
  * A rel="nofollow" attribute is now automatically added to links in user
    comments.
  * Fixed a bug that prevented client-side caching of CSS and JS when
    server-side caching and minification were enabled.

Version 0.2.0 (2008-06-15)
  * Requires Ramaze 2008.06.
  * Requires Sequel 2.0.1.
  * Added --adapter command line option and server.adapter config option to
    specify a different Ramaze server adapter to use (the default is Thin).
  * Added --migrate command line option to automatically upgrade or downgrade
    a Thoth database schema.
  * Added site.enable_comments setting. Set this to false if you don't want
    users to be able to post comments on your blog.
  * Added server.enable_minify setting. When enabled, all CSS under /css and all
    JavaScript under /js will be minified on the fly.
  * Pagination bars now include links to up to nine nearby result pages in
    addition to the prev/next links.
  * Views are compiled by default in production mode, which improves performance
    significantly. To disable view compilation, set server.compile_views to
    false.
  * All admin forms validate a session-specific form token on submission to
    prevent cross-site request forgery attacks.
  * The Flickr and Delicious plugins are now included in the main Thoth gem.
  * The Flickr and Delicious plugins have been modified to take advantage of
    Ramaze's improved value cache rather than handling their own caching.
  * Added a Twitter plugin.
  * Added a Tags plugin for displaying tag statistics.
  * Fixed incorrect default paths for the theme.public, theme.view, and media
    config settings.
  * Fixed the --home command line option.
